--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <li><a href="lesson15/index.html">lesson15</a></li>
     <li><a href="lesson16/index.html">lesson16</a></li>
     <li><a href="luke1/index.html">luke1</a></li>
+    <li><a href="luke2/index.html">luke2</a></li>
+    <li><a href="luke3/index.html">luke3</a></li>
+    <li><a href="luke4/index.html">luke4</a></li>
   </ol>
 </body>
 </html>
