--- a/luke6/index.html
+++ b/luke6/index.html
@@ -17,5 +17,14 @@
       $( renderScene );
     </script>
 
+    <h2>Controls:</h2>
+
+    <ul>
+        <li><code>Page Up</code>/<code>Page Down</code> to zoom out/in
+        <li>Cursor keys: make the cube rotate (the longer you hold down a cursor key, the more it accelerates)
+        <li><code>F</code> to toggle through three different kinds of texture filters
+    </ul>
+
+    <br/>
   </body>
 </html>
